// Copyright (c) 2017 Cisco and/or its affiliates.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at:
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package node;

// NodeInfo represents a node in the k8s cluster.
// It records an unique node ID to identify the node within the cluster.
// ID determines IPAM for the given node.
message NodeInfo {

    uint32 id = 1;

    string name = 2;

    string ip_address = 3;

    string management_ip_address = 4;
}